# vcuda-hook

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: cmake-base-validation.yml  codeQL.yml  fossa.yml
hack/: Dockerfile  build-builder.sh  build-via-builder.sh  build.sh
include/client/: client.hpp
include/cuda/: cuda_hook.hpp
include/device/: device.hpp
include/hook/: hook.hpp
include/nvml/: nvml_hook.hpp
include/util/: config.hpp  logger.hpp  usage.hpp  util.hpp
src/client/: client.cpp
src/cuda/: cuda_hook.cpp
src/device/: device.cpp
src/hook/: hook.cpp
src/nvml/: nvml_hook.cpp
src/util/: config.cpp  logger.cpp
tests/: memory_alloc.cu
